k8s/myconfigs/config-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
spec:
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
      - name: config-server
        image: saitejajambarapu/ecommerce-config-server:latest
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "400Mi"
            cpu: "200m"
        ports:
        - containerPort: 8888


---
apiVersion: v1
kind: Service   
metadata:
  name: config-server
spec:
  selector:
    app: config-server
  ports:
  - port: 8888
    targetPort: 8888
