k8s/myconfigs/inventory-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
spec:
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      containers:
      - name: inventory-service
        image: saitejajambarapu/ecommerce-inventory:latest
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "400Mi"
            cpu: "200m"
        ports:
        - containerPort: 8081


---
apiVersion: v1  
kind: Service  
metadata:
  name: inventory-service 
spec:
  selector: 
    app: inventory-service 
  ports:
  - port: 80
    targetPort: 8081
