k8s/myconfigs/order-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: saitejajambarapu/ecommerce-orders:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "400Mi"
            cpu: "200m"
        ports:
        - containerPort: 9092


---
apiVersion: v1  
kind: Service  
metadata:
  name: order-service 
spec:
  selector: 
    app: order-service 
  ports:
  - port: 80
    targetPort: 9092
